--- a/Code/blog.html
+++ b/Code/blog.html
@@ -7,19 +7,16 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Menambahkan font-weight 700 untuk navigasi -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. Pengaturan Dasar dan Variabel CSS */
     :root {
-        /* Path gambar diperbaiki: keluar dari folder 'Code' (../) lalu masuk ke 'Blog' */
         --bg-image: url('../Blog/Group 48096130.png');
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --text-color: #ffffff;
         --shadow-color: rgba(0, 0, 0, 0.25);
-        --gradient-color: #DC833F; /* Warna dari kode asli Anda */
+        --gradient-color: #DC833F; 
     }
 
     * {
@@ -38,11 +35,10 @@
             var(--bg-image);
         background-size: cover;
         background-position: center;
-        background-attachment: fixed; /* Latar belakang tidak ikut scroll */
+        background-attachment: fixed; 
         min-height: 100vh;
     }
 
-    /* === KODE UNTUK HEADER NAVIGASI (DITAMBAHKAN) === */
     .main-header {
         position: absolute;
         top: 0;
@@ -86,16 +82,15 @@
         transform-origin: bottom left;
     }
 
-    /* 2. Kontainer Utama */
     .page-container {
         width: 100%;
         max-width: 1400px;
         margin: 0 auto;
         padding: 4rem 2rem;
-        padding-top: 10rem; /* Ditambah agar ada ruang untuk header */
+        padding-top: 10rem;
     }
 
-    /* 3. Header Halaman */
+
     .page-header {
         margin-bottom: 4rem;
     }
@@ -115,7 +110,7 @@
         margin-left: 0.5rem;
     }
 
-    /* 4. Daftar Postingan Blog */
+
     .blog-posts {
         display: flex;
         flex-direction: column;
@@ -127,7 +122,7 @@
         text-decoration: none;
         color: var(--text-color);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
-        border-radius: 8px; /* Ditambahkan agar bayangan mengikuti bentuk gambar */
+        border-radius: 8px; 
     }
 
     .post-item img {
@@ -142,7 +137,7 @@
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     }
     
-    /* 5. Media Query untuk Mobile */
+
     @media (max-width: 1024px) {
         .main-header {
             padding: 1.5rem 1rem;
@@ -175,7 +170,6 @@
 </style>
 </head>
 <body>
-    <!-- === KODE UNTUK HEADER NAVIGASI (DITAMBAHKAN) === -->
     <header class="main-header">
         <nav class="main-nav">
             <a href="index.html">Home</a>
