--- a/Code/prevwork.html
+++ b/Code/prevwork.html
@@ -7,11 +7,9 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Menambahkan font-weight 700 untuk navigasi -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. Pengaturan Dasar dan Variabel CSS */
     :root {
         --bg-image: url('../PreviousWorks/Group 48096129.png'); 
         --primary-font: 'Poppins', sans-serif;
@@ -41,7 +39,7 @@
         background-attachment: fixed;
     }
 
-    /* === KODE UNTUK HEADER NAVIGASI (DITAMBAHKAN) === */
+
     .main-header {
         position: absolute;
         top: 0;
@@ -86,7 +84,7 @@
     }
 
 
-    /* 2. Kontainer Utama */
+
     .portfolio-container {
         display: flex;
         flex-direction: column;
@@ -94,10 +92,10 @@
         justify-content: center;
         min-height: 100vh;
         padding: 4rem 2rem;
-        padding-top: 10rem; /* Ditambah agar ada ruang untuk header */
+        padding-top: 10rem; 
     }
 
-    /* 3. Penataan Header (Judul) */
+
     .header {
         text-align: center;
         margin-bottom: 4rem;
@@ -118,7 +116,6 @@
         margin-top: -1rem;
     }
 
-    /* 4. Galeri Portofolio */
     .gallery {
         display: flex;
         flex-wrap: wrap;
@@ -146,7 +143,6 @@
         border-radius: 8px;
     }
     
-    /* Media Query untuk Mobile */
     @media (max-width: 1024px) {
         .main-header {
             padding: 1.5rem 1rem;
@@ -164,7 +160,6 @@
 </style>
 </head>
 <body>
-    <!-- === KODE UNTUK HEADER NAVIGASI (DITAMBAHKAN) === -->
     <header class="main-header">
         <nav class="main-nav">
             <a href="index.html">Home</a>
