--- a/Code/w130.html
+++ b/Code/w130.html
@@ -7,11 +7,10 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Menambahkan font-weight 700 untuk navigasi -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. Pengaturan Dasar dan Variabel CSS */
+
     :root {
         --bg-image: url('../W130/Group 48096136.png'); 
         --primary-font: 'Poppins', sans-serif;
@@ -29,12 +28,12 @@
     body {
         font-family: var(--primary-font);
         color: var(--text-color);
-        background-color: #333; /* Warna fallback */
+        background-color: #333; 
         line-height: 1.6;
         overflow-x: hidden;
     }
 
-    /* === KODE UNTUK HEADER NAVIGASI (DITAMBAHKAN) === */
+
     .main-header {
         position: absolute;
         top: 0;
@@ -78,7 +77,7 @@
         transform-origin: bottom left;
     }
 
-    /* 2. Layout Utama yang Responsif */
+ 
     .project-container {
         display: grid;
         grid-template-columns: 1.2fr 1fr;
@@ -92,7 +91,7 @@
         background-position: center;
     }
 
-    /* 3. Penataan Konten Teks */
+
     .text-content {
         display: flex;
         flex-direction: column;
@@ -122,7 +121,7 @@
         max-width: 65ch;
     }
 
-    /* 4. Penataan Gambar Samping */
+
     .image-content {
         height: 100vh;
         width: 100%;
@@ -134,7 +133,7 @@
         object-fit: cover;
     }
 
-    /* 5. Media Query untuk Mobile */
+
     @media (max-width: 1024px) {
         .main-header {
             padding: 1.5rem 2rem;
@@ -154,7 +153,7 @@
             order: 2;
             align-items: center;
             padding: 2rem;
-            padding-top: 8rem; /* Memberi ruang untuk header */
+            padding-top: 8rem; 
         }
 
         .image-content {
@@ -169,7 +168,7 @@
 </style>
 </head>
 <body>
-    <!-- === KODE UNTUK HEADER NAVIGASI (DITAMBAHKAN) === -->
+
     <header class="main-header">
         <nav class="main-nav">
             <a href="index.html">Home</a>
