--- a/Code/pargantara.html
+++ b/Code/pargantara.html
@@ -12,7 +12,7 @@
     <style>
         /* 1. Pengaturan Dasar dan Variabel CSS */
         :root {
-            --bg-image: url('../Pargantara/background.png'); /* Ganti dengan gambar latar Anda */
+            --bg-image: url('../Pargantara/Group 48096138.png'); /* Ganti dengan gambar latar Anda */
             --primary-font: 'Poppins', sans-serif;
             --display-font: 'Playfair Display', serif;
             --text-color: #ffffff;
