--- a/Code/vidprof.html
+++ b/Code/vidprof.html
@@ -7,11 +7,10 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Menambahkan font-weight 700 untuk navigasi -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
 
 <style>
-    /* 1. Pengaturan Dasar dan Variabel CSS */
+   
     :root {
         --bg-image: url('../Vidprof/Group 48096140.png');
         --primary-font: 'Poppins', sans-serif;
@@ -29,11 +28,10 @@
     body {
         font-family: var(--primary-font);
         color: var(--text-color);
-        background-color: #333; /* Warna fallback */
+        background-color: #333; 
         line-height: 1.6;
     }
 
-    /* === KODE UNTUK HEADER NAVIGASI (DITAMBAHKAN) === */
     .main-header {
         position: absolute;
         top: 0;
@@ -78,7 +76,7 @@
     }
 
 
-    /* 2. Layout Utama yang Responsif */
+
     .project-container {
         display: grid;
         grid-template-columns: 1.2fr 1fr;
@@ -94,7 +92,7 @@
         background-position: center;
     }
 
-    /* 3. Penataan Konten Teks */
+
     .text-content {
         display: flex;
         flex-direction: column;
@@ -124,7 +122,6 @@
         margin-bottom: 2.5rem;
     }
 
-    /* 4. Penataan Tombol */
     .cta-button {
         width: 100%;
         max-width: 348px;
@@ -137,7 +134,6 @@
         transform: scale(1.05);
     }
 
-    /* 5. Penataan Gambar */
     .image-content {
         display: flex;
         justify-content: center;
@@ -153,7 +149,6 @@
         object-fit: cover;
     }
 
-    /* 6. Media Query untuk Mobile */
     @media (max-width: 1024px) {
         .main-header {
             padding: 1.5rem 2rem;
@@ -167,7 +162,7 @@
         .project-container {
             grid-template-columns: 1fr;
             padding: 2rem;
-            padding-top: 8rem; /* Memberi ruang untuk header */
+            padding-top: 8rem;
             text-align: center;
         }
 
@@ -191,7 +186,7 @@
 </style>
 </head>
 <body>
-    <!-- === KODE UNTUK HEADER NAVIGASI (DITAMBAHKAN) === -->
+
     <header class="main-header">
         <nav class="main-nav">
             <a href="index.html">Home</a>
