--- a/Code/aboutme.html
+++ b/Code/aboutme.html
@@ -11,8 +11,8 @@
 
 <style>
     :root {
-        --bg-image: url('../AboutMe/Group 48096149.png');
-        --side-image: url('../AboutMe/Group 48096148.png');
+        --bg-image: url('/AboutMe/Group 48096149.png');
+        --side-image: url('/AboutMe/Group 48096148.png');
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --text-color: #ffffff;
@@ -166,8 +166,7 @@
                     <ul>
                         <li>Copywriting</li>
                         <li>Cinematography</li>
-                        <li>Programming (Python & JS)</li>
-                        <li>UI/UX</li>
+                        <li>Design and Motion Graphics</li>
                     </ul>
                 </div>
             </div>
