--- a/Code/contact.html
+++ b/Code/contact.html
@@ -11,7 +11,7 @@
 
 <style>
     :root {
-        --bg-image: url('../Contact/Group 48096128.png');
+        --bg-image: url('/Contact/Group 48096128.png');
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --text-color: #ffffff;
@@ -198,21 +198,21 @@
             <ul class="contact-list">
                 <li>
                     <div class="contact-item no-hover">
-                        <img class="contact-icon" src="../Contact/email.png" alt="Ikon Email">
+                        <img class="contact-icon" src="/Contact/email.png" alt="Ikon Email">
                         <span>5016221045@student.its.ac.id</span>
                     </div>
                 </li>
 
                 <li>
                     <a href="https://wa.me/628118111628" target="_blank" class="contact-item">
-                        <img class="contact-icon" src="../Contact/wangsaf.png" alt="Ikon WhatsApp">
+                        <img class="contact-icon" src="/Contact/wangsaf.png" alt="Ikon WhatsApp">
                         <span>+62 811-8111-628</span>
                     </a>
                 </li>
 
                 <li>
                     <a href="https://instagram.com/ra.merlin" target="_blank" class="contact-item">
-                        <img class="contact-icon" src="../Contact/insta.png" alt="Ikon Instagram">
+                        <img class="contact-icon" src="/Contact/insta.png" alt="Ikon Instagram">
                         <span>@ra.merlin</span>
                     </a>
                 </li>
