--- a/Code/index.html
+++ b/Code/index.html
@@ -11,7 +11,7 @@
 
 <style>
     :root {
-        --bg-image: url('../Home Page/BG HP.png'); 
+        --bg-image: url('/Home Page/BG HP.png'); 
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair+Display', serif;
         --nav-font: 'Poppins', sans-serif;
