--- a/Code/post1.html
+++ b/Code/post1.html
@@ -11,8 +11,8 @@
 
 <style>
     :root {
-        --bg-image: url('../Blog/Blog 1/Group 48096117.png');
-        --side-image: url('../Blog/Blog 1/Group 48096150.png');
+        --bg-image: url('/Blog/Blog 1/Group 48096117.png');
+        --side-image: url('/Blog/Blog 1/Group 48096150.png');
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --text-color-light: #ffffff;
