--- a/Code/prevwork.html
+++ b/Code/prevwork.html
@@ -11,7 +11,7 @@
 
 <style>
     :root {
-        --bg-image: url('../PreviousWorks/Group 48096129.png'); 
+        --bg-image: url('/PreviousWorks/Group 48096129.png'); 
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --text-color: #ffffff;
@@ -179,31 +179,31 @@
         <div class="gallery">
             <div class="gallery-item">
                 <a href="webgis.html">
-                    <img src="../PreviousWorks/WebGIS.png" alt="Proyek WebGIS">
+                    <img src="/PreviousWorks/WebGIS.png" alt="Proyek WebGIS">
                 </a>
             </div>
 
             <div class="gallery-item">
                 <a href="siteplan.html">
-                    <img src="../PreviousWorks/Siteplan.png" alt="Proyek Siteplan">
+                    <img src="/PreviousWorks/Siteplan.png" alt="Proyek Siteplan">
                 </a>
             </div>
 
             <div class="gallery-item">
                 <a href="w130.html">
-                    <img src="../PreviousWorks/W130.png" alt="Proyek W130">
+                    <img src="/PreviousWorks/W130.png" alt="Proyek W130">
                 </a>
             </div>
 
             <div class="gallery-item">
                 <a href="pargantara.html">
-                    <img src="../PreviousWorks/Pargantara.png" alt="Proyek Pargantara">
+                    <img src="/PreviousWorks/Pargantara.png" alt="Proyek Pargantara">
                 </a>
             </div>
 
             <div class="gallery-item">
                 <a href="vidprof.html">
-                    <img src="../PreviousWorks/Vid[prof.png" alt="Proyek Video Profile">
+                    <img src="/PreviousWorks/Vid[prof.png" alt="Proyek Video Profile">
                 </a>
             </div>
         </div>
