--- a/Code/siteplan.html
+++ b/Code/siteplan.html
@@ -12,7 +12,7 @@
 <style>
     :root {
 
-        --bg-image: url('../Siteplan/Group 48096117.png'); 
+        --bg-image: url('/Siteplan/Group 48096117.png'); 
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --text-color: #ffffff;
@@ -190,7 +190,7 @@
         </div>
         <div class="image-content">
             <!-- Path diperbaiki: keluar dari 'Code', lalu masuk ke folder 'Siteplan' -->
-            <img class="project-image" src="../Siteplan/Group 48096113.png" alt="Ilustrasi Siteplan Proyek Manajemen Pertanahan">
+            <img class="project-image" src="/Siteplan/Group 48096113.png" alt="Ilustrasi Siteplan Proyek Manajemen Pertanahan">
         </div>
     </main>
 </body>
