--- a/Code/vidprof.html
+++ b/Code/vidprof.html
@@ -12,7 +12,7 @@
 <style>
    
     :root {
-        --bg-image: url('../Vidprof/Group 48096140.png');
+        --bg-image: url('/Vidprof/Group 48096140.png');
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --text-color: #ffffff;
@@ -205,11 +205,11 @@
                 Setiap potret adalah cerminan keluarga HIMAGE-ITS. Di sini, kolaborasi terasa dari tatapan hangat, ide-ide cemerlang lahir dari mata yang antusias, dan kebersamaan menjadi ikatan yang tak akan lekang oleh waktu. HIMAGE-ITS menjadi sebuah rumah untuk melangkah bersama, membawa semangat, cita-cita, dan rasa bangga yang sama.
             </p>
             <a href="https://youtu.be/BqKPmRbIZgo?si=QyEZmV5Jn-5zVJoj" title="Watch Video" target="_blank">
-                <img class="cta-button" src="../Vidprof/button.png" alt="Tombol Nonton Video">
+                <img class="cta-button" src="/Vidprof/button.png" alt="Tombol Nonton Video">
             </a>
         </div>
         <div class="image-content">
-            <img class="project-image" src="../Vidprof/Group 48096111.png" alt="Foto Profil Grup HIMAGE-ITS">
+            <img class="project-image" src="/Vidprof/Group 48096111.png" alt="Foto Profil Grup HIMAGE-ITS">
         </div>
     </main>
 </body>
