--- a/Code/w130.html
+++ b/Code/w130.html
@@ -12,7 +12,7 @@
 <style>
 
     :root {
-        --bg-image: url('../W130/Group 48096136.png'); 
+        --bg-image: url('/W130/Group 48096136.png'); 
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --text-color: #ffffff;
@@ -188,7 +188,7 @@
             </p>
         </div>
         <div class="image-content">
-            <img class="project-image" src="../W130/Group 48096112.png" alt="Foto mobil W130">
+            <img class="project-image" src="/W130/Group 48096112.png" alt="Foto mobil W130">
         </div>
     </main>
 </body>
