--- a/Code/webgis.html
+++ b/Code/webgis.html
@@ -11,7 +11,7 @@
 
 <style>
     :root {
-        --bg-image: url('../WebGIS/Group 48096117.png'); 
+        --bg-image: url('/WebGIS/Group 48096117.png'); 
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --text-color: #ffffff;
@@ -211,7 +211,7 @@
             </a>
         </div>
         <div class="image-content">
-            <img class="project-image" src="../WebGIS/Group 48096113.png" alt="Ilustrasi Proyek WebGIS UMKM">
+            <img class="project-image" src="/WebGIS/Group 48096113.png" alt="Ilustrasi Proyek WebGIS UMKM">
         </div>
     </main>
 </body>
