--- a/SIGWEB/index.html
+++ b/SIGWEB/index.html
@@ -13,7 +13,7 @@
     :root {
         /* --- INI PERBAIKANNYA --- */
         /* Spasi dalam nama folder dan file diubah menjadi %20 agar valid sebagai URL */
-        --bg-image: url('Home%20Page/BG%20HP.png'); 
+        --bg-image: url('/Home Page/BG HP.png'); 
         --primary-font: 'Poppins', sans-serif;
         --display-font: 'Playfair Display', serif;
         --nav-font: 'Poppins', sans-serif;
